--- a/doc/special-pages.tex
+++ b/doc/special-pages.tex
@@ -15,7 +15,7 @@
 	\midrule
 	\textbf{Disambiguation}
 		& \emph{\checkmark Ignore.} Disambiguation sites are no entities, i.e.\ we never want to link to them so a language model is not necessary.
-		& \emph{\checkmark Ignore.} If two things are named similar, they do not necessarily a semantic connection, e.g.\ "Angela Merkel" vs. "Merkel, Texas". \emph{Idea:} Redirect links to disambiguation pages to the disambiguated pages.
+		& \emph{\checkmark Ignore.} If two things are named similar, they do not necessarily have a semantic connection, e.g.\ "Angela Merkel" vs. "Merkel, Texas". \emph{Idea:} Redirect links to disambiguation pages to the disambiguated pages.
 		& \emph{\checkmark Extract.} Could contain useful mentions, especially because usually a different link text is used for each entity.  \\
 	\textbf{Redirects}
 		& \emph{\checkmark Ignore.} Makes no sense to create a language model for a redirect (text is empty except \mbox{\#REDIRECT} call). \emph{Idea:} Create same language model as for the redirected entity.
