--- a/doc/special-pages.tex
+++ b/doc/special-pages.tex
@@ -18,8 +18,8 @@
 		& \emph{\checkmark Ignore.} If two things are named similar, they do not necessarily have a semantic connection, e.g.\ "Angela Merkel" vs. "Merkel, Texas". \emph{Idea:} Redirect links to disambiguation pages to the disambiguated pages.
 		& \emph{\checkmark Extract.} Could contain useful mentions, especially because usually a different link text is used for each entity.  \\
 	\textbf{Redirects}
-		& \emph{\checkmark Ignore.} Makes no sense to create a language model for a redirect (text is empty except \mbox{\#REDIRECT} call). \emph{Idea:} Create same language model as for the redirected entity.
-		& \emph{\checkmark Extract.} To take care of pages wrongly linking to the redirecting page.
+		& \emph{\checkmark Ignore.} Makes no sense to create a language model for a redirect (text is empty except \mbox{\#REDIRECT} call).
+		& \emph{\checkmark Extract.} To take care of pages wrongly linking to the redirecting page. \emph{Idea:} Resolve redirects to skip the redirecting page.
 		& \emph{\checkmark Extract.} Usually contain no useful mentions, but parse nevertheless. \\
 	\textbf{Lists}
 		& \emph{\checkmark Ignore.} Lists are no entities (or are they?).
