Read needed files in the SurfaceNotALinkCountPlan.

--- a/todo
+++ b/todo
@@ -30,3 +30,5 @@ Intersection
 Bug-Report to Stratosphere about using the same union twice (see WikipediaTrainingTask)
 --------------------------------
 Write tests
+--------------------------------
+RUN ON SERVER, DISTRIBUTED
