--- a/todo
+++ b/todo
@@ -1,7 +1,13 @@
+---------------------------------
+Isfet out-of-space-problem
+---------------------------------
+Build simplified case that shows the "hanging"-bug
+---------------------------------
 Stem mentions:
 To handle plural etc.
-Remove tokens (What-if token is the only thing)?
+Remove tokens (What if token is the only thing)?
 ---------------------------------
+Copy data to HDFS
 ---------------------------------
 Redirect resolving:
 One pass to determine context links and redirects
