--- a/todo
+++ b/todo
@@ -1,4 +1,8 @@
 ---------------------------------
+Wikispace:
+Handle empty links  [[Bilateral relations of Bosnia and Herzegovina| ]]
+Link text: go many levels deep
+---------------------------------
 Isfet out-of-space-problem
 ---------------------------------
 Stem mentions:
