Add performance improvement idea to todos.
Former-commit-id: f97805224a7bd6a5bce26370f755adf007a4af0b

--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
 ---------------------------------
+Extract links directly when extracting wiki pages --> Performance improvement?
+---------------------------------
 Copy data to HDFS
 ---------------------------------
 Redirect resolving:
