--- a/todo
+++ b/todo
@@ -1,6 +1,9 @@
 ---------------------------------
 Run two local stratospheres at the same time.
 ---------------------------------
+---------------------------------
+Remove wiktionary links.
+---------------------------------
 Extract links directly when extracting wiki pages --> Performance improvement?
 ---------------------------------
 Copy data to HDFS
