Update to Flink.
Former-commit-id: dee6d7c22a3039119f2de14b037493af9a5f28f5

--- a/todo
+++ b/todo
@@ -12,3 +12,5 @@ b) # of documents, in which the mention does not occur as a link
 --> get percentage to use for NER later
 --------------------------------
 RUN ON SERVER, DISTRIBUTED
+--------------------------------
+Set links to empty string?
