--- a/todo
+++ b/todo
@@ -14,3 +14,6 @@ b) # of documents, in which the mention does not occur as a link
 RUN ON SERVER, DISTRIBUTED
 --------------------------------
 Set links to empty string?
+--------------------------------
+Contains check to trie
+Save documents as well
