--- a/todo
+++ b/todo
@@ -29,4 +29,8 @@ stefan.bunk@isfet:/data/wikipedia/results/last_output$ grep -P "^merkel\t" docum
 merkel  1479
 stefan.bunk@isfet:/data/wikipedia/results/last_output$ grep -P "^merkel\t" entire-text-surface-counts.wiki
 merkel  1607
-
+-----
+After the filter refactoring, it is:
+stefan.bunk@isfet:/data/wikipedia/results/latest_output$ grep -P "^merkel\t" surface-link-probs.wiki
+merkel  1446    0.04149377593360996
+Why is it less now?
