--- a/todo
+++ b/todo
@@ -24,3 +24,4 @@ Idea:
 First bold text in article usually gives another surface. Use that?
 Example: http://en.wikipedia.org/wiki/Michael_Jordan_(Irish_politician)
 --------------------------------
+Check some empty strings in the surface probs
