Quick fix for aggregating bug.
Former-commit-id: 750c897790338ca0074f2fe40517ed3333514f18

--- a/todo
+++ b/todo
@@ -6,3 +6,4 @@ Remove wiktionary links.
 Some output files do not have the correct format, i.e. in some rows the probabilities are missing.
 Flink bug? -- Check again for 0.7 release.
 --------------------------------
+Aggregating on field positions is only possible on tuple data types.
