Recursively call Extractor for extrating links inside template parameters.
Former-commit-id: 01a3d221726f32fcbfe214d9d84c842fc6c68d20

--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
-Fix infobox link recognition.
+Fix infobox link recognition. Also for plaintexts!!!
 
+Smaller resolution in first percentages of surfaces. Also display, how many are actually filtered.
 Calculate prominence scores and context probabilities.
 Determine position, where a surface occurs.
+Look for library for random walk.
