Prominence scores with join and groupBy.
Former-commit-id: a54160980d57748e07fd3c83e47640b690388459

--- a/todo
+++ b/todo
@@ -1,6 +1,4 @@
-Fix infobox link recognition. Also for plaintexts!!!
-
-Smaller resolution in first percentages of surfaces. Also display, how many are actually filtered.
 Calculate prominence scores and context probabilities.
-Determine position, where a surface occurs.
-Look for library for random walk.
+Look for library for random walk/apache matrix?
+
+LM entity model in one line toString, fromString
