--- a/todo
+++ b/todo
@@ -1,4 +1,10 @@
-Calculate prominence scores and context probabilities.
 Look for library for random walk/apache matrix?
 
 LM entity model in one line toString, fromString
+
+Create real unique link ids by using the server as the starting counter, e.g. tenem11 --> 0, tenem12 --> 10000000 etc..
+
+Find network monitoring tool
+
+➜  ~  wc -l 1
+16825720 1
