Also classify with naive bayes.
Former-commit-id: 915be5d66e77baf6b9d1a8302a6bd091829b5465

--- a/todo
+++ b/todo
@@ -6,7 +6,12 @@ Create real unique link ids by using the server as the starting counter, e.g. te
 
 Find network monitoring tool
 
+redirect resolving
+
 ➜  ~  wc -l all-links/1
 16825720 1
+Unique ids
+
+Entity POS tagging
 
 Try rebalance
