Refactoring: create method object KeepLinkTokenizer.
Former-commit-id: 66c2bb4220a0aa666032c1840bb1dc5dcbb4a077

--- a/todo
+++ b/todo
@@ -16,3 +16,4 @@ ForwardedFields everywhere
 
 Todo: Diff the ml-suite.txt with the original, because there were some small bugfixes in between!
 
+Only POS tag if necessary -- sentence contains link!
