--- a/todo
+++ b/todo
@@ -18,6 +18,8 @@ Ask Sebastian about combineGroup
 15:12:13: Group Reduce Training Data Scores (first)
 15:51:13: Group Reduce Training Data Scores (last)
 
+--> 90 min
+
 --> This times 10x.
 
 
