--- a/todo
+++ b/todo
@@ -1,3 +1,6 @@
+Consider worst case document
+Rosters of the top basketball teams in European club competitions
+
 Look for library for random walk/apache matrix?
 
 redirect resolving
