ClassificationInfo is used in classificaton program.
Former-commit-id: 4ae78e2b16cfe9250487fd1decb2fb058be9001d

--- a/todo
+++ b/todo
@@ -1,3 +1,5 @@
+Test if with constant set helps for the training data program
+
 Consider worst case document
 Rosters of the top basketball teams in European club competitions
 
