--- a/todo
+++ b/todo
@@ -29,3 +29,6 @@ Ask Sebastian about combineGroup
 
 
 Try fat jar script on isfet
+
+
+LMs um Kontexte erweitern? Im Sinne von das LM wird um den Kontext der Links auf diese Entitaet erweitert.
