--- a/todo
+++ b/todo
@@ -1,9 +1,22 @@
+
+Language Models
+--> Surface Probs herunterladen
+Entire Text Surfaces
+Surface Link Probs
+Training Data Program
+--> Copy to isfet
+--> Machine learning test suite
+--> Copy new models
+--> Run again
+
+
+
+
+
 Test if with constant set helps for the training data program
 
 Consider worst case document
 Rosters of the top basketball teams in European club competitions
-
-Look for library for random walk/apache matrix?
 
 redirect resolving
 
@@ -12,23 +25,6 @@ Try rebalance
 ForwardedFields everywhere
 
 Ask Sebastian about combineGroup
-
-
-14:26:50: Start
-14:27:16: Parsed Surfaces
-14:34:23: Read Wiki Pages
-14:35:25: Read Surface Probs
-14:46:12: Read Language Models
-14:46:38: First Join
-15:12:13: Group Reduce Training Data Scores (first)
-15:51:13: Group Reduce Training Data Scores (last)
-
---> 90 min
-
---> This times 10x.
-
-
-Try fat jar script on isfet
 
 
 LMs um Kontexte erweitern? Im Sinne von das LM wird um den Kontext der Links auf diese Entitaet erweitert.
