--- a/todo
+++ b/todo
@@ -1,4 +1,6 @@
-
+Question for Toni:
+What happens when a candidate occurs multiple times in the same text?
+And one is right and one is wrong?
 
 Test if with constant set helps for the training data program
 
