--- a/todo
+++ b/todo
@@ -1,7 +1,3 @@
-Question for Toni:
-What happens when a candidate occurs multiple times in the same text?
-And one is right and one is wrong?
-
 Test if with constant set helps for the training data program
 
 Consider worst case document
@@ -9,15 +5,7 @@ Rosters of the top basketball teams in European club competitions
 
 Try rebalance
 
+Think about naming files, especially classification and random walk results
+
 ForwardedFields everywhere
 
-Ask Sebastian about combineGroup
-
-LMs um Kontexte erweitern? Im Sinne von das LM wird um den Kontext der Links auf diese Entitaet erweitert.
-
-
-
-s1 -> x   mit Gewichtung 2/3
-s2 /
-
-s3 -> y   mit Gewichtung 1/3
