Fix string splitting in random walk program

--- a/todo
+++ b/todo
@@ -6,6 +6,8 @@ Overlapping trie hits filter out
 // TODO
 size of candidates/seeds compared to
 
+TODO: Fix redirects in language models
+
 splitten dokumente:
 erst flatmap
 
